#ifndef __ENUMS_HH__
#define __ENUMS_HH__

enum ComponentType {
	CLIENT = 1, OSD = 2, MDS = 3, MONITOR = 4 // numbers match message.proto
};

enum FailureReason {
	UNREACHABLE, DISKFAILURE, SEGMENTLOST
};

enum MessageStatus {
	WAITING, READY, TIMEOUT
};

enum FileType {
	NOTFOUND = 1, NORMAL = 2, FOLDER = 3, NEWFILE = 4
};

enum DataMsgType {
	DEFAULT_DATA_MSG = 15,
	UPLOAD = 1,
	DOWNLOAD = 2,
	RECOVERY = 3,
	UPDATE = 4,
	PARITY = 5
};

enum UpdateScheme {
	FO, FL, PL, PLR
};

enum BlockType {
    DEFAULT_BLOCK_TYPE = 15,
    DATA_BLOCK = 0,     // must be 0 to make it compatible with boolean
    PARITY_BLOCK = 1
};

enum MsgType {
	DEFAULT,

	// HANDSHAKE
	HANDSHAKE_REQUEST,
	HANDSHAKE_REPLY,

	// METADATA
	LIST_DIRECTORY_REQUEST,
	LIST_DIRECTORY_REPLY,
	UPLOAD_FILE_REQUEST,
	UPLOAD_FILE_REPLY,
	DELETE_FILE_REQUEST,
	DELETE_FILE_REPLY,
	UPLOAD_SEGMENT_ACK,
	UPLOAD_SEGMENT_ACK_REPLY,
	GET_SEGMENT_ID_LIST_REQUEST,//11
	GET_SEGMENT_ID_LIST_REPLY,
	DOWNLOAD_FILE_REQUEST,
	DOWNLOAD_FILE_REPLY,
	GET_SEGMENT_INFO_REQUEST,
	GET_SEGMENT_INFO_REPLY,
	SAVE_SEGMENT_LIST_REQUEST,
	SAVE_SEGMENT_LIST_REPLY,
	SET_FILE_SIZE_REQUEST,
	RENAME_FILE_REQUEST,
	RENAME_FILE_REPLY,//21

	// TRANSFER
	PUT_SEGMENT_INIT_REQUEST,
	PUT_SEGMENT_INIT_REPLY,
	PUT_SMALL_SEGMENT_REQUEST,
	SEGMENT_TRANSFER_END_REQUEST,
	SEGMENT_TRANSFER_END_REPLY,
	PUT_BLOCK_INIT_REQUEST,
	PUT_BLOCK_INIT_REPLY,
	BLOCK_TRANSFER_END_REQUEST,
	BLOCK_TRANSFER_END_REPLY,
	SEGMENT_DATA,
	BLOCK_DATA,
	GET_SEGMENT_REQUEST,
	GET_BLOCK_INIT_REQUEST,

	// STATUS
	OSD_STARTUP,
	OSD_SHUTDOWN,
	OSDSTAT_UPDATE_REQUEST,
	OSDSTAT_UPDATE_REPLY,

	// NODE_LIST
	GET_PRIMARY_LIST_REQUEST,
	GET_PRIMARY_LIST_REPLY,
	GET_SECONDARY_LIST_REQUEST,
	GET_SECONDARY_LIST_REPLY,
	GET_OSD_LIST_REQUEST,
	GET_OSD_LIST_REPLY,

	// Newly Added
	NEW_OSD_REGISTER,
	ONLINE_OSD_LIST,

	// Newly Added For degraded read
	GET_OSD_STATUS_REQUEST,
	GET_OSD_STATUS_REPLY,

	//RECOVERY
	RECOVERY_TRIGGER_REQUEST,
	RECOVERY_TRIGGER_REPLY,
	REPAIR_SEGMENT_INFO,

	// END
	MSGTYPE_END
};

enum CodingScheme {
	DEFAULT_CODING = 15,
	RAID0_CODING = 1,
	RAID1_CODING = 2,
	RAID5_CODING = 3,
	RS_CODING = 4,
	EMBR_CODING = 5,
	CAUCHY = 6,
	EVENODD_CODING = 7,
	RDP_CODING = 8
};

#endif
